# grpc-gateway

./: .pre-commit-config.yaml  gen_rpc.sh  pyproject.toml  requirements-dev.txt  requirements-framework.txt  requirements-no-framework-test.txt  requirements-test.txt  requirements.txt  tox.ini
example/common/: response_model.py
example/fastapi_example/: grpc_route.py  utils.py
example/flask_example/: grpc_route.py  utils.py
example/grpc_common/: gen_example_proto_by_option_rpc.sh  gen_example_proto_rpc.sh  plugin_config.py  server.py
example/grpc_common/example_proto/user/: user.proto
example/grpc_common/example_proto_by_option/book/: manager.proto  social.proto
example/grpc_common/example_proto_by_option/other/: other.proto
example/grpc_common/example_proto_by_option/user/: user.proto
example/grpc_common/python_example_proto_code/example_proto/book/: manager_pb2_grpc.py  manager_pb2_grpc.pyi  social_pb2_grpc.py  social_pb2_grpc.pyi
example/grpc_common/python_example_proto_code/example_proto/other/: other_pb2_grpc.py  other_pb2_grpc.pyi
example/grpc_common/python_example_proto_code/example_proto/user/: user_pb2_grpc.py  user_pb2_grpc.pyi
example/grpc_common/python_example_proto_code/example_proto_by_option/book/: manager_p2p.py  manager_pait_route.py  manager_pb2.py  social_p2p.py  social_pait_route.py
example/grpc_common/python_example_proto_code/example_proto_by_option/common/: api_pb2.py
example/grpc_common/python_example_proto_code/example_proto_by_option/other/: other_p2p.py  other_pait_route.py
example/grpc_common/python_example_proto_code/example_proto_by_option/user/: user_p2p.py  user_pait_route.py
example/grpc_proto/example_proto/book/: manager.proto  social.proto
example/grpc_proto/example_proto/other/: other.proto
example/grpc_proto/example_proto_by_option/book/: manager.proto  social.proto
example/grpc_proto/example_proto_by_option/common/: api.proto
example/grpc_proto/example_proto_by_option/other/: other.proto
example/grpc_proto/example_proto_by_option/user/: user.proto
example/python_grpc_proto_code/example/grpc_proto/example_proto/book/: manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py  manager_pb2_grpc.pyi  social_pb2.py  social_pb2_grpc.py  (+1 more)
example/sanic_example/: grpc_route.py  utils.py
example/starlette_example/: grpc_route.py  utils.py
example/tornado_example/: grpc_route.py  utils.py
grpc_gateway/: base_gateway.py  desc_template.py  inspect.py  model.py  protobuf_types.py  rebuild_message.py
grpc_gateway/dynamic_gateway/: gateway.py  inspect.py
grpc_gateway/gateway/: base_gateway.py  dynamic_gateway.py
grpc_gateway/proto/: api_pb2.py
grpc_gateway/protobuf_plugin/: code_gen.py  config.py  field_desc_proto_to_route_code.py  gateway.py  main.py  model.py
images/: grpc-gateway_drawio
scripts/: gen_example_proto_by_option_rpc.sh  gen_example_proto_rpc.sh
tests/: base_api_test.py  conftest.py  test_fastapi.py  test_flask.py  test_grpc.py  test_proto_gen.py  test_sanic.py  test_starlette.py  test_tornado.py
tests/test_lib/: demo.proto  demo_api.proto  test_desc_template.py  test_model.py  test_rebuild_message.py  util.py
tests/test_lib/test_dynamic_gateway/: test_gateway.py  test_inspect.py
tests/test_web_framework/: base_api_test.py  test_fastapi.py  test_flask.py  test_sanic.py  test_starlette.py  test_tornado.py  util.py
(+34 files in other folders)
